--- a/TodoAPI/appsettings.json
+++ b/TodoAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TodoDb": "Server=sql-server;Database=TodoDb;User=sa;Password=Pass@Word1;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
