--- a/TodoAPI/TodoAPI.csproj
+++ b/TodoAPI/TodoAPI.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.1.0" />
   </ItemGroup>
 
   <ItemGroup>
