--- a/todoapp.client/public/manifest.json
+++ b/todoapp.client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Aspire Todo",
+  "name": "Aspire Todo - A .NET Aspire Application",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#8661c5",
   "background_color": "#ffffff"
 }
