cors no longer messing it up

--- a/AspireTodo.AppHost/Properties/launchSettings.json
+++ b/AspireTodo.AppHost/Properties/launchSettings.json
@@ -10,7 +10,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21230",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22037"
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22037",
+        "PORT": "58733"
       }
     },
     "http": {
@@ -22,7 +23,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19287",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20183"
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20183",
+        "PORT": "58733"
       }
     }
   }
