--- a/azure.yaml
+++ b/azure.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
-name: aspiretodo-apphost
+name: todo-app
 services:  
   app:
     language: dotnet
-    project: ./AspireTodo.AppHost.csproj
+    project: ./AspireTodo.AppHost/AspireTodo.AppHost.csproj
     host: containerapp
